# Poetry-and-Venv-setup

./: .env  NOTEBOOK.txt  README.md  alembic.ini  database.py  main.py  pyproject.toml  settings.py
app/: controller.py  crud.py  database.py  main.py  models.py  schemas.py  settings.py  test_sql_app.py  view.py
app/controller/: ticket_controller.py
app/database/: database.py
app/models/: models.py
app/repositories/: cache_repository.py
app/schemas/: ticket_schema.py
app/services/: cache_service.py
app/view/: ticket_router.py
fast_api_backend/: .flake8  Dockerfile  README.md  __init__.py  alembic.ini  database.py  main.py  pyproject.toml  pytest.ini  test_main.py
fast_api_backend/auth/: auth_repo.py
fast_api_backend/controller/: auth_controller.py  user_controller.py  users.py
fast_api_backend/core/: configuration.py
fast_api_backend/database/: database.py
fast_api_backend/migrations/versions/: 0031104260f6_create_user_table.py  1ec61d44b19a_create_user_table.py  36b181894ad0_create_user_table.py  8ccc74cd8d1a_add_columns.py  92adc8bc099e_add_columns.py
fast_api_backend/models/: model.py
fast_api_backend/models.egg-info/: SOURCES.txt  top_level.txt
fast_api_backend/schemas/: user_schema.py
fast_api_backend/service/: auth_service.py  user_service.py
fast_api_backend/tests/: .coverage  test_main.py
fast_api_backend/view/: authentication_router.py  user_router.py
migration/versions/: 2645cd5bb949_create_events_table.py  3706c66cbd39_create_table.py  c0508b8c6712_add_modified_column.py
tests/: test_main.py  test_sql_app.py
