[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["nunegabriel <nune.gabriel.gn@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.6"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
