[tool.poetry]
name = "fast-api-project"
version = "0.1.0"
description = ""
authors = ["Samuel Appau <appausamuel90@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
sqlalchemy = "^2.0.6"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
uvicorn = "^0.21.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
